--- a/site/index.html
+++ b/site/index.html
@@ -1,3 +1,5 @@
+<!-- Mobile version for iPhone 6s -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +11,9 @@
 </head>
 <body>
     <div class="wrap">
-        
+        <header>
+            
+        </header>
     </div>
 </body>
 </html>
