--- a/site/public/index.html
+++ b/site/public/index.html
@@ -7,7 +7,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Är det 1 maj?</title>
 </head>
 
@@ -19,37 +21,41 @@
             </h1>
         </header>
         <nav>
-            nav
+            <i class="material-icons">
+               menu
+            </i>
         </nav>
         <main>
-    <h1>
-        Clock placeholder
-    </h1>
+    <div class="clock">
+        <h1>
+            Clock placeholder
+        </h1>
+    </div>
+    <div class="belowclock">
+        <h1>
+            img
+        </h1>
+    </div>
 </main>
-<article class="index">
-    <h1>
-        img
-    </h1>
-</article>
-        <footer>
-            <div class="info">
-                <p>
-                    Skapad av Emil Sönksen
-                </p>
-            </div>
-            <div class="links">
-                <div class="instagram">
-                    <a href="">
-                        Instagram
-                    </a>
+            <footer>
+                <div class="info">
+                    <p>
+                        Skapad av Emil Sönksen
+                    </p>
                 </div>
-                <div class="github">
-                    <a href="">
-                        GitHub
-                    </a>
+                <div class="links">
+                    <div class="instagram">
+                        <a href="">
+                            Instagram
+                        </a>
+                    </div>
+                    <div class="github">
+                        <a href="">
+                            GitHub
+                        </a>
+                    </div>
                 </div>
-            </div>
-        </footer>
+            </footer>
     </div>
 </body>
 
