--- a/site/public/index.html
+++ b/site/public/index.html
@@ -32,9 +32,8 @@
         </h1>
     </div>
     <div class="belowclock">
-        <h1>
-            img
-        </h1>
+        
+        <img src="./img/gladlofvenedit.png" alt="Löfven">
     </div>
 </main>
             <footer>
