Began styling desktop index

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -22,7 +22,12 @@
                     close
                 </i>
             </div>
-            
+
+            <ul>
+                <a href="">
+                    Hem
+                </a>
+            </ul>
             <ul>
                 <a href="">
                     Info
@@ -31,7 +36,7 @@
             <ul>
                 <a href="">
                     Galleri
-                </a>    
+                </a>
             </ul>
         </div>
         <nav>
@@ -39,6 +44,21 @@
                 <i class="material-icons">
                     menu
                 </i>
+            </div>
+            <div class="home">
+                <a href="">
+                    Hem
+                </a>
+            </div>
+            <div class="about">
+                <a href="">
+                    Info
+                </a>
+            </div>
+            <div class="gallery">
+                <a href="">
+                    Galleri
+                </a>
             </div>
         </nav>
         <header>
