--- a/site/public/index.html
+++ b/site/public/index.html
@@ -45,20 +45,22 @@
                     menu
                 </i>
             </div>
-            <div class="home">
-                <a href="">
+            <div class="desktop">
+                <div class="home">
+                    <a href="">
                     Hem
                 </a>
-            </div>
-            <div class="about">
-                <a href="">
+                </div>
+                <div class="about">
+                    <a href="">
                     Info
                 </a>
-            </div>
-            <div class="gallery">
-                <a href="">
+                </div>
+                <div class="gallery">
+                    <a href="">
                     Galleri
                 </a>
+                </div>
             </div>
         </nav>
         <header>
