--- a/site/public/about.html
+++ b/site/public/about.html
@@ -70,14 +70,15 @@
             </h1>
         </header>
         <main>
-    <div class="clock">
-        <h1>
-            Clock placeholder
-        </h1>
-    </div>
-    <div class="belowclock">
+    <article>
+
+    </article>
+    <aside>
+
+    </aside>
+    <aside>
         
-    </div>
+    </aside>
 </main>
             <footer>
                 <div class="info">
