--- a/site/public/about.html
+++ b/site/public/about.html
@@ -24,17 +24,17 @@
             </div>
 
             <ul>
-                <a href="">
+                <a href="./index.html">
                     Hem
                 </a>
             </ul>
             <ul>
-                <a href="">
+                <a href="./about.html">
                     Info
                 </a>
             </ul>
             <ul>
-                <a href="">
+                <a href="./gallery.html">
                     Galleri
                 </a>
             </ul>
@@ -71,13 +71,17 @@
         </header>
         <main>
     <article>
-
+        <h1>
+            1 Maj
+        </h1>
+        <p>
+            Första maj är arbetarrörelsens internationella högtidsdag som firas sedan 1890 på initiativ av Andra internationalen, bland
+            annat till åminnelse av Haymarketmassakern 1886. Denna dag firas runt om i världen av olika vänsterorganisationer,
+            partier och fackföreningar med demonstrationer och möten. 
+        </p>
     </article>
     <aside>
-
-    </aside>
-    <aside>
-        
+        <img src="./img/about-image.png" alt="Strong together, comrade!">
     </aside>
 </main>
             <footer>
