Began work on desktop site

--- a/site/public/gallery.html
+++ b/site/public/gallery.html
@@ -69,7 +69,7 @@
                 Är det 1 maj?
             </h1>
         </header>
-        <div class="gallery">
+        <div class="page-gallery">
     <div class="image1">
         <img src="./img/gallery-image1.png" alt="Fight the capitalists!">
         <!-- <div class="gallery-info">
