--- a/site/public/gallery.html
+++ b/site/public/gallery.html
@@ -48,17 +48,17 @@
             </div>
             <div class="desktop">
                 <div class="home">
-                    <a href="">
+                    <a href="./index.html">
                     Hem
                 </a>
                 </div>
                 <div class="about">
-                    <a href="">
+                    <a href="./about.html">
                     Info
                 </a>
                 </div>
                 <div class="gallery">
-                    <a href="">
+                    <a href="./gallery.html">
                     Galleri
                 </a>
                 </div>
