Finished about.html

--- a/site/public/about.html
+++ b/site/public/about.html
@@ -84,12 +84,20 @@
         <div class="march">
             <img src="./img/about-image.png" alt="Strong together, comrade!">
         </div>
-        <dev class="imageinfo">
+        <div class="march-desktop">
+            <img src="./img/about-image-desktop.png" alt="Bigoted cis scum">
+        </div>
+        <div class="imageinfo">
             <p>
                 På bilden ovan syns Första-
                 majdemonstrationen i Moskva år 1960
             </p>
-        </dev>
+        </div>
+        <div class="imageinfo-desktop">
+            <p>
+                På bilden ovan syns Förstamajdemonstrationen på Bantorget i Stockholm år 1917.
+            </p>
+        </div>
     </aside>
 </main>
             <footer>
