--- a/site/public/index.html
+++ b/site/public/index.html
@@ -72,12 +72,26 @@
         <main>
     <div class="clock">
         <h1>
-            Clock placeholder
+            Tid till 1 Maj:
         </h1>
-    </div>
-    <div class="belowclock">
-        
-    </div>
+        <div id="clockdiv">
+            <div>
+                <span class="days"></span>
+                <div class="smalltext">Dagar</div>
+            </div>
+            <div>
+                <span class="hours"></span>
+                <div class="smalltext">Timmar</div>
+            </div>
+            <div>
+                <span class="minutes"></span>
+                <div class="smalltext">Minuter</div>
+            </div>
+            <div>
+                <span class="seconds"></span>
+                <div class="smalltext">Sekunder</div>
+            </div>
+        </div>
 </main>
             <footer>
                 <div class="info">
